<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">DMB Player For Android</string>
    <string name="zhanshi">切换到图片展示页面</string>
    <string name="sushe">切换到宿舍安全教育页面</string>
    <string name="setting_title">DMB 播放器设置</string>
    <string name="scenes">请选择此播放器的使用场景</string>
    <string name="editBuildingStr">请选择教学楼</string>
    <string name="sure">确定</string>
    <string name="curriculum">课表</string>
    <string name="setting">设置</string>
    <string name="dormitoryImageDesc">宿舍 image 描述</string>
    <string name="dormitory">宿舍</string>
    <string name="carousel">轮播图</string>
    <string name="video">视频</string>
    <string name="audio">音频</string>
    <string name="action_text_skip">Skip</string>
    <string name="action_text_done">Done</string>
    <string name="action_text_retry">Retry</string>
    <string name="bt_app_name">TV Tuner</string>
    <string name="ut_app_name">USB TV Tuner</string>
    <string name="nt_app_name">Network TV Tuner (BETA)</string>
    <string name="ut_setup_cancel">Please wait to finish processing</string>
    <string name="ut_rescan_needed">Tuner software has been recently updated. Please re-scan the
        channels.</string>
    <string name="ut_surround_sound_disabled">Enable surround sound in system sound settings to enable audio</string>
    <string name="audio_passthrough_not_supported">Cannot play audio. Please try another TV</string>
    <string name="ut_setup_breadcrumb">Channel tuner setup</string>
    <string name="bt_setup_new_title">TV Tuner setup</string>
    <string name="ut_setup_new_title">USB channel tuner setup</string>
    <string name="nt_setup_new_title">Network tuner setup</string>
    <string name="bt_setup_new_description">Verify your TV is connected to a TV signal
        source.\n\nIf using an over-the-air antenna, you may need to adjust its placement or
        direction to receive the most channels. For best results, place it high and near a
        window.</string>
    <string name="ut_setup_new_description">Verify the USB tuner is plugged in and connected
        to a TV signal source.\n\nIf using an over-the-air antenna, you may need to adjust its
        placement or direction to receive the most channels. For best results,
        place it high and near a window.</string>
    <string name="nt_setup_new_description">Verify the network tuner is powered on and connected
        to a TV signal source.\n\nIf using an over-the-air antenna, you may need to adjust its
        placement or direction to receive the most channels. For best results,
        place it high and near a window.</string>
    <string-array name="ut_setup_new_choices">
        
        <item>Continue</item>
        
        <item>Not now</item>
    </string-array>
    <string name="bt_setup_again_title">Rerun channel setup?</string>
    <string name="bt_setup_again_description">This will remove the channels found from the TV
        tuner and scan for new channels again.\n\nVerify your TV is connected to a TV signal
        source.\n\nIf using an over-the-air antenna, you may need to adjust its placement or
        direction to receive the most channels. For best results, place it high and near a
        window.</string>
    <string name="ut_setup_again_description">This will remove the channels found from the USB
        tuner and scan for new channels again.\n\nVerify the USB tuner is plugged in and connected
        to a TV signal source.\n\nIf using an over-the-air antenna, you may need to adjust its
        placement or direction to receive the most channels. For best results, place it high and
        near a window.</string>
    <string name="nt_setup_again_description">This will remove the channels found from the network
        tuner and scan for new channels again.\n\nVerify the network tuner is powered on and
        connected to a TV signal source.\n\nIf using an over-the-air antenna, you may need to adjust
        its placement or direction to receive the most channels. For best results, place it high and
        near a window.</string>
    <string-array name="ut_setup_again_choices">
        
        <item>Continue</item>
        
        <item>Cancel</item>
    </string-array>
    <string name="ut_connection_title">Select the connection type</string>
    <string name="ut_connection_description">Choose Antenna if there is an external antenna
        connected to the tuner. Choose Cable if your channels come from a cable service provider.
        If you are not sure, both types will be scanned, but this may take longer.</string>
    <string-array name="ut_connection_choices">
        
        <item>Antenna</item>
        
        <item>Cable</item>
        
        <item>Not sure</item>
        <item translatable="false">Development only</item>
    </string-array>
    <string name="bt_channel_scan">TV tuner setup</string>
    <string name="ut_channel_scan">USB channel tuner setup</string>
    <string name="nt_channel_scan">Network channel tuner setup</string>
    <string name="ut_channel_scan_time">This may take several minutes</string>
    <string name="ut_channel_scan_tuner_unavailable">Tuner is temporarily not available or already
        used by recording.</string>
    <plurals name="ut_channel_scan_message">
        <item quantity="one">%1$d channel found</item>
        <item quantity="other">%1$d channels found</item>
    </plurals>
    <string name="ut_stop_channel_scan">STOP CHANNEL SCAN</string>
    <string name="ut_lineup_title_lineups_found">Select a TV lineup</string>
    <string name="ut_lineup_description_lineups_found">Choose how you receive your TV signal.</string>
    <string name="ut_lineup_title_lineups_not_found">No TV lineups found</string>
    <string name="ut_lineup_description_lineups_not_found">Please make sure your device is connected to the internet and the zip code / postal code is correct.</string>
    <string name="ut_lineup_title_fetching_lineups">Fetching TV lineups…</string>
    <string name="ut_lineup_description_fetching_lineups">This may take a few minutes. Please wait…</string>
    <string name="ut_lineup_no_channels_matched">No channels match</string>
    <plurals name="ut_lineup_channels_matched">
        <item quantity="one"><xliff:g id="channels_matched_one">%1$d</xliff:g> channel matches</item>
        <item quantity="other"><xliff:g id="channels_matched_other">%1$d</xliff:g> channels match</item>
    </plurals>
    <string name="ut_lineup_name_antenna">Antenna</string>
    <plurals name="ut_result_found_title">
        <item quantity="one">%1$d channel found</item>
        <item quantity="other">%1$d channels found</item>
    </plurals>
    <string name="ut_result_found_description">If that seems incorrect, try adjusting your antenna and scan again.</string>
    <string-array name="ut_result_found_choices">
        <item>Done</item>
        <item>Scan again</item>
    </string-array>
    <string name="ut_result_not_found_title">No Channels found</string>
    <string name="bt_result_not_found_description">The scan did not find any channels. Verify
        your TV is connected to a TV signal source.\n\nIf using an over-the-air antenna, adjust
        its placement or direction. For best results, place it high and near a window and scan
        again.</string>
    <string name="ut_result_not_found_description">The scan did not find any channels. Verify the
        USB tuner is plugged in and connected to a TV signal source.\n\nIf using an over-the-air
        antenna, adjust its placement or direction. For best results, place it high and near a
        window and scan again.</string>
    <string name="nt_result_not_found_description">The scan did not find any channels. Verify the
        network tuner is powered on and connected to a TV signal source.\n\nIf using an over-the-air
        antenna, adjust its placement or direction. For best results, place it high and near a
        window and scan again.</string>
    <string-array name="ut_result_not_found_choices">
        <item>Scan again</item>
        <item>Done</item>
    </string-array>
    <string name="ut_setup_notification_channel_name">USB Tuner setup</string>
    <string name="ut_setup_notification_content_title">Scan for TV channels</string>
    <string name="bt_setup_notification_content_text">TV Tuner setup</string>
    <string name="ut_setup_notification_content_text">USB TV Tuner setup</string>
    <string name="nt_setup_notification_content_text">Network TV Tuner setup</string>
    <string name="msg_usb_tuner_disconnected">USB TV tuner disconnected.</string>
    <string name="msg_network_tuner_disconnected">Network tuner disconnected.</string>
    <string name="postal_code_guidance_title">Enter your ZIP Code.</string>
    <string name="postal_code_guidance_description">
        Please enter your ZIP code.
        <xlgiff id="break">\n</xlgiff>
        Your ZIP code is stored on device locally and sent to Google servers when updating your
        program information. The ZIP code sent is never associated with your account or stored in
        Google servers.
        <xlgiff id="break">\n</xlgiff>
        If you do not provide your ZIP code, your TV program guide will be limited.</string>
    <string name="postal_code_guidance_description_get_location_failed">
        <xliff:g id="app_name">Live TV</xliff:g> cannot determine your location.</string>
    <string name="postal_code_action_description">Enter your ZIP Code</string>
    <string name="postal_code_invalid_warning">Invalid ZIP Code</string>
    <string name="location_guidance_title">Location</string>
    <string name="location_guidance_description">
        <xliff:g id="app_name">Live TV</xliff:g> uses your ZIP code to provide a complete
        program guide for your TV channels.
        <xlgiff id="break">\n</xlgiff>
        Your ZIP code is stored on device locally and sent to Google servers when updating your
        program information. The ZIP code sent is never associated with your account or stored in
        Google servers.
        <xlgiff id="break">\n</xlgiff>
        If you do not grant permission or do not manually enter your ZIP code, your TV program guide
        will be limited.</string>
    <string name="location_choices_allow_permission">Grant Permission</string>
    <string name="location_choices_enter_zip_code">Enter Zip Code</string>
    <string name="location_choices_getting_location">Getting Location</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carousel_signal_description">信号</string>
    <string name="scene_name">预设名称</string>
    <string name="scene_name_filling_reminder">给使用场景取个名字吧</string>
    <string name="working_frequency">工作频点</string>
    <string name="Device_ID">设备ID</string>
    <string name="Play_type">播放类型</string>
    <string name="teaching_building">教学楼</string>
    <string name="save">保存</string>
    <string name="Playback_settings">播放设置</string>
    <string name="dormitory_title">学生宿舍数字多媒体安全教育信息平台</string>
    <string name="kind_tips">温馨提示:</string>
    <string name="apartment_per_back">公寓行为透视镜背景</string>
    <string name="clock_back">时间背景</string>
    <string name="safe_back">安全须知背景</string>
    <string name="birthday_wishes_background">生日祝福背景</string>
</resources>