<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~              Copyright 2022 By Gouzhong1223
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".actives.fragment.PresetFragment">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

        <TextView
                android:layout_marginTop="20dp"
                android:focusable="false"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="35sp"
                android:text="@string/Playback_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

            <TextView
                    android:text="@string/scene_name"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RelativeOverlap" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/sceneNameEdit"
                    style="@style/EditText.Material"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_width="200dp"
                    android:height="60dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/scene_name_filling_reminder" />
        </RelativeLayout>

        <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

            <TextView
                    android:text="@string/working_frequency"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RelativeOverlap" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/frequencyEdit"
                    style="@style/EditText.Material"
                    android:inputType="number"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_width="200dp"
                    android:height="60dp"
                    android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

            <TextView
                    android:text="@string/Device_ID"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RelativeOverlap" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/idEdit"
                    android:inputType="number"
                    style="@style/EditText.Material"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_width="200dp"
                    android:height="60dp"
                    android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

            <TextView
                    android:text="@string/Play_type"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RelativeOverlap" />

            <Spinner
                    style="@style/Material.SpinnerStyle"
                    android:id="@+id/playType"
                    app:ms_in_dialog="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_width="200dp"
                    android:height="60dp"
                    android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
                android:visibility="invisible"
                android:id="@+id/buildingRelativeLayout"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

            <TextView
                    android:text="@string/teaching_building"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RelativeOverlap" />

            <Spinner
                    style="@style/Material.SpinnerStyle"
                    android:id="@+id/playBuilding"
                    android:layout_centerVertical="true"
                    app:ms_in_dialog="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_width="200dp"
                    android:height="60dp"
                    android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

            <Button
                    android:id="@+id/submit_btn"
                    android:text="@string/save"
                    android:textSize="40sp"
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
