<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~              Copyright 2022 By Gouzhong1223
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".actives.DormitorySafetyActivity">

    <ImageView
            android:id="@+id/dormitory_signal"
            android:layout_width="135dp"
            android:layout_height="50dp"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/carousel_signal_description" />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_weight="7"
                android:layout_height="0dp"
                android:baselineAligned="false">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:background="@drawable/shape_10dp_corners"
                    android:layout_height="match_parent"
                    tools:ignore="NestedWeights">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/clock_back" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="11"
                    android:orientation="vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/shape_10dp_corners"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/dormitory_title"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_horizontal"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:background="@drawable/shape_10dp_corners"
                    android:layout_height="match_parent">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_weight="15"
                android:layout_height="0dp"
                android:baselineAligned="false">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:background="@drawable/shape_10dp_corners"
                    android:layout_height="match_parent"
                    tools:ignore="NestedWeights">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/safe_back" />
            </LinearLayout>


            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="11"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/shape_10dp_corners"
                    android:layout_height="match_parent">

                <com.youth.banner.Banner
                        android:id="@+id/dormitory_banner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="match_parent">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/shape_10dp_corners"
                        android:layout_height="0dp">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/birthday_wishes_background" />
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/shape_10dp_corners"
                        android:layout_height="0dp">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/apartment_per_back" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@drawable/shape_10dp_corners"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:layout_height="0dp">

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/kind_tips_textView"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:text="@string/kind_tips"
                    android:textColor="#FF0000"
                    android:autoSizeTextType="uniform"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    tools:ignore="NestedWeights" />

            <com.xuexiang.xui.widget.textview.MarqueeTextView
                    android:layout_marginEnd="15dp"
                    android:layout_width="0dp"
                    android:layout_weight="11"
                    android:layout_height="match_parent" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
